src/test/ui/borrowck/suggest-assign-rvalue.stderr
error[E0381]: used binding `my_float` isn't initialized
  --> $DIR/suggest-assign-rvalue.rs:15:30
   |
LL |     let my_float: f32;
   |         -------- binding declared here but left uninitialized
LL |     println!("my_float: {}", my_float);
   |                              ^^^^^^^^ `my_float` used here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use `=` to assign some value to `my_float`
   |
LL |     let my_float: f32 = 0.0;
   |         ~~~~~~~~~~~~~~~~~~~~

error[E0381]: used binding `demo` isn't initialized
  --> $DIR/suggest-assign-rvalue.rs:18:28
   |
LL |     let demo: Demo;
   |         ---- binding declared here but left uninitialized
LL |     println!("demo: {:?}", demo);
   |                            ^^^^ `demo` used here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use `=` to assign some value to `demo`
   |
LL |     let demo: Demo = Default::default();
   |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0381]: used binding `demo_no` isn't initialized
  --> $DIR/suggest-assign-rvalue.rs:22:31
   |
LL |     let demo_no: DemoNoDef;
   |         ------- binding declared here but left uninitialized
LL |     println!("demo_no: {:?}", demo_no);
   |                               ^^^^^^^ `demo_no` used here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use `=` to assign some value to `demo_no`
   |
LL |     let demo_no: DemoNoDef = something;
   |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0381]: used binding `arr` isn't initialized
  --> $DIR/suggest-assign-rvalue.rs:26:27
   |
LL |     let arr: [i32; 5];
   |         --- binding declared here but left uninitialized
LL |     println!("arr: {:?}", arr);
   |                           ^^^ `arr` used here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use `=` to assign some value to `arr`
   |
LL |     let arr: [i32; 5] = [val; 5];
   |         ~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0381]: used binding `foo` isn't initialized
  --> $DIR/suggest-assign-rvalue.rs:29:27
   |
LL |     let foo: Vec<&str>;
   |         --- binding declared here but left uninitialized
LL |     println!("foo: {:?}", foo);
   |                           ^^^ `foo` used here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use `=` to assign some value to `foo`
   |
LL |     let foo: Vec<&str> = vec![];
   |         ~~~~~~~~~~~~~~~~~~~~~~~~

error[E0381]: used binding `my_string` isn't initialized
  --> $DIR/suggest-assign-rvalue.rs:33:31
   |
LL |     let my_string: String;
   |         --------- binding declared here but left uninitialized
LL |     println!("my_string: {}", my_string);
   |                               ^^^^^^^^^ `my_string` used here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use `=` to assign some value to `my_string`
   |
LL |     let my_string: String = Default::default();
   |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0381]: used binding `my_int` isn't initialized
  --> $DIR/suggest-assign-rvalue.rs:37:28
   |
LL |     let my_int: &i32;
   |         ------ binding declared here but left uninitialized
LL |     println!("my_int: {}", *my_int);
   |                            ^^^^^^^ `*my_int` used here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use `=` to assign some value to `my_int`
   |
LL |     let my_int: &i32 = something;
   |         ~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0381]: used binding `hello` isn't initialized
  --> $DIR/suggest-assign-rvalue.rs:41:27
   |
LL |     let hello: &str;
   |         ----- binding declared here but left uninitialized
LL |     println!("hello: {}", hello);
   |                           ^^^^^ `hello` used here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: use `=` to assign some value to `hello`
   |
LL |     let hello: &str = something;
   |         ~~~~~~~~~~~~~~~~~~~~~~~~

error[E0381]: used binding `never` isn't initialized
  --> $DIR/suggest-assign-rvalue.rs:45:27
   |
LL |     let never: !;
   |         ----- binding declared here but left uninitialized
LL |     println!("never: {}", never);
   |                           ^^^^^ `never` used here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0381`.
